@@ -24,6 +24,7 @@ import org.apache.cassandra.config.ColumnDefinition;
 import org.apache.cassandra.db.IColumn;
 import org.apache.cassandra.db.index.AbstractSimplePerColumnSecondaryIndex;
 import org.apache.cassandra.db.index.SecondaryIndexSearcher;
+import org.apache.cassandra.db.marshal.AbstractType;
 import org.apache.cassandra.exceptions.ConfigurationException;
 
 /**
@@ -50,5 +51,10 @@ public class KeysIndex extends AbstractSimplePerColumnSecondaryIndex
     public void validateOptions() throws ConfigurationException
     {
         // no options used
+    }
+
+    protected AbstractType getExpressionComparator()
+    {
+        return baseCfs.getComparator();
     }
 }
